objects/AIA_FACET_Class__c.object
<CustomObject>
    <fields>
        <fullName>Effective_New_Date__c</fullName>
        <description>Effective date on package  = Effective date on BRF (if request type = new/prospect)
Effective date on package  =*manual* (if request type = other than new/prospect)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>RETIREE</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FACETS_Classes_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FACETS Classes Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(2 OR 3) AND 1</booleanFilter>
            <filterItems>
                <field>$Source.Group_Structure_Request_Form__c</field>
                <operation>equals</operation>
                <valueField>AIA_Group_Structure_Form_Product__c.Group_Structure_Request_Form__c</valueField>
            </filterItems>
            <filterItems>
                <field>AIA_Group_Structure_Form_Product__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vision</value>
            </filterItems>
            <filterItems>
                <field>AIA_Group_Structure_Form_Product__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dental</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AIA_Group_Structure_Form_Product__c</referenceTo>
        <relationshipLabel>FACETS Classes</relationshipLabel>
        <relationshipName>FACET_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipName>FACET_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Description other</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Group_Structure_Request_Form_Product__r.Proposed_Products__r.Plan_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_description__c</fullName>
        <label>Product description</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BLUEDENTAL PLUS</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY BLUEDENTAL PLUS</fullName>
                </value>
                <value>
                    <fullName>BLUEDENTAL BASIC</fullName>
                </value>
                <value>
                    <fullName>PREFERRED (PPO) DENTAL</fullName>
                </value>
                <value>
                    <fullName>TRADITIONAL DENTAL</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY PERFERRED DENTAL</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY TRADITIONAL DENTAL</fullName>
                </value>
                <value>
                    <fullName>BLUEDENTAL PREFERRED (MEDIGAP)</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY BLUEDENTAL PREFERRED (MEDIGAP)</fullName>
                </value>
                <value>
                    <fullName>BLUEDENTAL TRADITIONAL (MEDIGAP)</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY BLUEDENTAL TRADTIONAL (MEDIGAP)</fullName>
                </value>
                <value>
                    <fullName>BLUEDHMO</fullName>
                </value>
                <value>
                    <fullName>DENTAL HMO</fullName>
                </value>
                <value>
                    <fullName>FREESTANDING DENTAL HMO (DHMO)</fullName>
                </value>
                <value>
                    <fullName>DENTAL HMO OPT-OUT</fullName>
                </value>
                <value>
                    <fullName>BLUE PLUS</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TERM_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>FACETS Class</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FACETS Classes Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FACETS Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>F001_Product_Description_Other</fullName>
        <active>false</active>
        <description>if Product description is null/blank, then Product description  other field must be populated</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; if(AND(  Group_Structure_Request_Form_Product__c = null,  Product_Description_other__c = null),true,false)</errorConditionFormula>
        <errorDisplayField>Product_Description_other__c</errorDisplayField>
        <errorMessage>Product Description is blank.  A Product Description of Other must be provided.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>F002_Termination_Date</fullName>
        <active>true</active>
        <description>When Request Type of related GSRF is "Prospect/New", the Term Date must be blank.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND( ISPICKVAL(Group_Structure_Request_Form__r.Implementation__r.Benefit_Request_Form__r.Request_Type__c, 'Prospect/New') , NOT( ISBLANK( TERM_Date__c) ) )</errorConditionFormula>
        <errorDisplayField>TERM_Date__c</errorDisplayField>
        <errorMessage>Termination date not valid for Request Type Prospect/New</errorMessage>
    </validationRules>
</CustomObject>